# disvoice

./: .env  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  go.mod  go.sum  libportaudio64bit (1).dll:Zone.Identifier  main.go  project.json  windows.env
audio/: audio.go
backend/: config.go  effect.go
config/: config.go
disvoice_autogen/: moc_predefs.h
frontend/: README.md  angular.json  karma.conf.js  package-lock.json  package.json  package.json.md5  tsconfig.json  tslint.json
frontend/e2e/src/: app.e2e-spec.ts
frontend/src/: index.html  styles.scss
frontend/src/app/: app-routing.module.ts  app.component.ts
frontend/src/app/core/: core.module.ts
frontend/src/app/core/models/: config.model.ts  effect.model.ts
frontend/src/app/core/services/: backend.service.ts  config.service.ts  effect.service.spec.ts  effect.service.ts
frontend/src/app/home/: home.component.html  home.component.scss  home.module.ts
frontend/src/app/home/components/effects/: effects.component.html  effects.component.scss  effects.component.ts
plugin/: audio.cxx  audio.hxx  disvoice.cxx  disvoice.hxx  effect.cxx  effect.hxx  error.hxx  logger.cxx  logger.hxx  plugin.go  vst_plugin.cxx  vst_plugin.hxx  window.cxx  window.hxx
src/: audio.cpp  audio.h  common.cpp  common.h  config.h  effect.cpp  effect.h  error.h  logger.cpp  main.cpp  main.cpp.bck  main.qml  qml.qrc  vst_plugin.cpp  vst_plugin.h  window.cpp  window.h
vst_test/: all.go
window/: window.go
